# Sentinel

./: .env.example  .gitignore  README.md  Sentinel_Phase10_to_15_Complete.md  Sentinel_Testing_Guide_Phase1-9.md  pyproject.toml
sentinel/: __init__.py  cli.py
sentinel/agents/: base.py  demo_target.py  experiment_architect.py  experiment_executor.py  failure_discovery.py  hypothesis_engine.py  intervention_engine.py  simulation_engine.py
sentinel/api/: __init__.py  app.py  auth.py  routes.py  schemas.py  tasks.py
sentinel/attacks/: __init__.py  classifier.py  loader.py  models.py  reporter.py  runner.py
sentinel/benchmark/: __init__.py  metrics.py  models.py  profiles.py  regression.py  report.py  suite.py
sentinel/config/: modes.py  settings.py
sentinel/core/: approval_gate.py  control_plane.py  cost_tracker.py  risk_policy.py
sentinel/dashboard/: __init__.py  server.py
sentinel/dashboard/routes/: __init__.py  (+6 more)
sentinel/db/: audit.py  connection.py  models.py
sentinel/integrations/: __init__.py  model_client.py  pipeline_adapter.py
sentinel/memory/: __init__.py  graph.py  models.py  repository.py
sentinel/reporting/: __init__.py  json_report.py  markdown_report.py  queries.py
sentinel/taxonomy/: failure_types.py
sentinel/tui/: __init__.py  app.py
tests/: conftest.py  test_benchmark.py  test_dashboard.py  test_integration_guide.py  test_phase10.py  test_phase11.py  test_phase2.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8a.py  test_phase8b.py  test_phase8c.py  test_phase9a.py  test_phase9b.py  test_phase9c.py  test_phase9d.py
(+94 files in other folders)
